fixed styling issues for big-cards on mobile

--- a/client/src/sass/_utilities.scss
+++ b/client/src/sass/_utilities.scss
@@ -224,3 +224,12 @@
     font-size: 1rem;
     margin: -1rem 0 1rem 0;
 }
+
+@media screen and (max-width: 815px) {
+    .big-card {
+        margin: 2.5rem .25rem;
+    }
+    .tab {
+        padding: 0;
+    }
+}
