--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -844,6 +844,13 @@
             .feature-nav ul {
                 flex-direction: column;
             }
+            // Measure
+            .results-tab {
+                padding: 0;
+            }
+            .tracker-parent {
+                width: 90%;
+            }
         }
         
         // .social-wrapper {}
